2006-04-19  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/inflate.h (inflate_free): Removed prototype.

	* kaffe/kaffevm/inflate.c (inflate_free): Made static. 
	Moved up in the file so that it's defined before use.

2006-04-19  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/inflate.h (inflate_new): Removed prototype.

	* kaffe/kaffevm/inflate.c (inflate_new): Made static.

2006-04-19  Riccardo Mottola <riccardo@kaffe.org>

	* kaffe/libraries/javalib/awt-implementations/kaffe/java/awt/AWTEventMulticaster.java:
	Removed, so to use classpath versions.

2006-04-19  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/java_lang_reflect_VMArray.c 
	(Java_java_lang_reflect_VMArray_createObjectArray): Renamed to ...
	(Java_java_lang_reflect_VMArray_createObjectArray0).

	* libraries/javalib/vmspecific/java/lang/reflect/VMArray.java: 
	(createObjectArray) Check if dim is negative and throw 
	NegativeArraySizeException accordingly.
	(createObjectArray0) New native method.
	
2006-04-18 Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/vmspecific/java/lang/reflect/Field.java
	(get, getBoolean, getByte, getChar, getShort, getInt, getLong,
	getFloat, getDouble, setBooleanInternal, setByteInternal, 
	setCharInternal, setDoubleInternal, setFloatInternal,
	setIntInternal, setLongInternal, setShortInternal): 
	Cleaned up. Reindented. Reimplemented widening by using
	the delegation method from java.lang.reflect.Array.

2006-04-18 Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed merging in of java.lang.reflect, as that's now 
	completed.

2006-04-18 Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/reflect.c (KaffeVM_makeReflectField),
	kaffe/kaffevm/jni/jni-helpers.c (KaffeJNI_FromReflectedField):
	Updated for new Field implementation.

	* libraries/clib/native/Field.c: Include local native.h.
	(getFieldAddress) Updated for new Field implementation.
	(java_lang_reflect_Field_getModifiers) Renamed to ...